--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.0.0",
+    "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.24",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^5.1.0",
