--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.24",
+    "@types/supertest": "^2.0.12",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^5.1.0",
     "jest": "^28.1.3",
